--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@ai-sdk/google": "^2.0.26",
     "@ai-sdk/openai": "^2.0.60",
     "@hookform/resolvers": "^5.2.2",
+    "@polar-sh/better-auth": "^1.3.0",
+    "@polar-sh/sdk": "^0.40.3",
     "@prisma/client": "^6.18.0",
     "@prisma/extension-accelerate": "^2.0.2",
     "@radix-ui/react-accordion": "^1.2.12",
