--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "lucide-react": "^0.548.0",
     "next": "16.0.0",
     "next-themes": "^0.4.6",
+    "nuqs": "^2.7.3",
     "random-word-slugs": "^0.1.7",
     "react": "19.2.0",
     "react-day-picker": "^9.11.1",
