--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@trpc/client": "^11.7.1",
     "@trpc/server": "^11.7.1",
     "@trpc/tanstack-react-query": "^11.7.1",
+    "@xyflow/react": "^12.9.2",
     "ai": "^5.0.86",
     "better-auth": "^1.3.34",
     "class-variance-authority": "^0.7.1",
