--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
     "@ai-sdk/google": "^2.0.26",
     "@ai-sdk/openai": "^2.0.60",
     "@hookform/resolvers": "^5.2.2",
+    "@paralleldrive/cuid2": "^3.0.4",
     "@polar-sh/better-auth": "^1.3.0",
     "@polar-sh/sdk": "^0.40.3",
-    "@prisma/client": "^6.18.0",
+    "@prisma/client": "^6.19.0",
     "@prisma/extension-accelerate": "^2.0.2",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "^1.1.15",
@@ -50,7 +51,7 @@
     "@trpc/client": "^11.7.1",
     "@trpc/server": "^11.7.1",
     "@trpc/tanstack-react-query": "^11.7.1",
-    "@xyflow/react": "^12.9.2",
+    "@xyflow/react": "^12.9.3",
     "ai": "^5.0.86",
     "better-auth": "^1.3.34",
     "class-variance-authority": "^0.7.1",
@@ -90,7 +91,7 @@
     "eslint-config-next": "16.0.0",
     "inngest-cli": "^1.13.1",
     "mprocs": "^0.7.3",
-    "prisma": "^6.18.0",
+    "prisma": "^6.19.0",
     "tailwindcss": "^4",
     "tsx": "^4.20.6",
     "tw-animate-css": "^1.4.0",
