--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "embla-carousel-react": "^8.6.0",
     "inngest": "^3.44.4",
     "input-otp": "^1.4.2",
+    "jotai": "^2.15.1",
     "lucide-react": "^0.548.0",
     "next": "16.0.0",
     "next-themes": "^0.4.6",
