--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "inngest": "^3.44.4",
     "input-otp": "^1.4.2",
     "jotai": "^2.15.1",
+    "ky": "^1.14.0",
     "lucide-react": "^0.548.0",
     "next": "16.0.0",
     "next-themes": "^0.4.6",
@@ -80,6 +81,7 @@
     "sonner": "^2.0.7",
     "superjson": "^2.2.5",
     "tailwind-merge": "^3.3.1",
+    "toposort": "^2.0.2",
     "vaul": "^1.1.2",
     "zod": "^4.1.12"
   },
@@ -88,6 +90,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/toposort": "^2.0.7",
     "eslint": "^9",
     "eslint-config-next": "16.0.0",
     "inngest-cli": "^1.13.1",
