--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@ai-sdk/google": "^2.0.26",
     "@ai-sdk/openai": "^2.0.60",
     "@hookform/resolvers": "^5.2.2",
+    "@inngest/realtime": "^0.4.5",
     "@paralleldrive/cuid2": "^3.0.4",
     "@polar-sh/better-auth": "^1.3.0",
     "@polar-sh/sdk": "^0.40.3",
