--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "@types/react-dom": "^19",
     "@types/toposort": "^2.0.7",
     "cross-env": "^10.1.0",
+    "cross-var": "^1.1.0",
     "dotenv-cli": "^11.0.0",
     "eslint": "^9",
     "eslint-config-next": "16.0.0",
