--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "recharts": "^2.15.4",
     "server-only": "^0.0.1",
     "sonner": "^2.0.7",
+    "stripe": "^20.0.0",
     "superjson": "^2.2.5",
     "tailwind-merge": "^3.3.1",
     "toposort": "^2.0.2",
