--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "prisma generate && next build",
     "start": "next start",
     "lint": "eslint",
+    "postinstall": "prisma generate",
     "ngrok:dev": "dotenv -- cross-var ngrok http --url=$NGROK_URL 3000",
     "inngest:dev": "inngest-cli dev",
     "dev:all": "dotenv -- mprocs"
