--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "nodebase",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "prisma generate && next build",
@@ -21,7 +22,8 @@
     "@paralleldrive/cuid2": "^3.0.4",
     "@polar-sh/better-auth": "^1.3.0",
     "@polar-sh/sdk": "^0.41.5",
-    "@prisma/client": "^6.19.0",
+    "@prisma/adapter-pg": "^7.1.0",
+    "@prisma/client": "^7.1.0",
     "@prisma/extension-accelerate": "^2.0.2",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "^1.1.15",
@@ -99,13 +101,12 @@
     "@types/react-dom": "^19",
     "@types/toposort": "^2.0.7",
     "cross-env": "^10.1.0",
-    "cross-var": "^1.1.0",
     "dotenv-cli": "^11.0.0",
     "eslint": "^9",
     "eslint-config-next": "16.0.0",
     "inngest-cli": "^1.13.1",
     "mprocs": "^0.7.3",
-    "prisma": "^6.19.0",
+    "prisma": "^7.1.0",
     "tailwindcss": "^4",
     "tsx": "^4.20.6",
     "tw-animate-css": "^1.4.0",
