--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nodebase",
+  "name": "triggerhive",
   "version": "0.1.0",
   "private": true,
   "type": "module",
@@ -73,7 +73,7 @@
     "jotai": "^2.15.1",
     "ky": "^1.14.0",
     "lucide-react": "^0.548.0",
-    "next": "16.0.7",
+    "next": "^16.0.10",
     "next-themes": "^0.4.6",
     "nuqs": "^2.7.3",
     "random-word-slugs": "^0.1.7",
